Add Tv,News and blog functionality

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -29,6 +29,27 @@
         </a>
     </li>
 
+    <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="news" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon fa fa-newspaper-o"></i> News
+        </a>
+    </li>
+
+    <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="blogs" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon fa fa-file-text"></i> Blogs
+        </a>
+    </li>
+
+    <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="tv" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon fa fa-television"></i> TV
+        </a>
+    </li>
+
     <!-- <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLinkActive="c-active" (click)="logout()">
 
