--- a/src/styles/_comman.scss
+++ b/src/styles/_comman.scss
@@ -1,61 +1,3 @@
-a.editprofile {
-    background: #3c4b64;
-    color: white;
-    margin: 15px;
-    line-height: 2;
-    padding: 6px 14px;
-    border-radius: 2px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-}
-a.editprofile i {
-    font-size: 20px;
-}
-.back-btn {
-    background: white;
-    padding: 13px 0px;
-    margin: 0 !important;
-    box-shadow: 0 2px 2px 0 rgb(60 75 100 / 14%),
-        0 3px 1px -2px rgb(60 75 100 / 12%), 0 1px 5px 0 rgb(60 75 100 / 20%);
-    border-top: 1px solid #808080;
-}
-header {
-    align-items: center;
-    justify-content: space-between;
-}
-.dropdown-menu.show a {
-    color: #3c4b64;
-    display: inline-block;
-    padding: 5px;
-}
-.dropdown-menu {
-    min-width: 12rem;
-    padding: 0.5rem 13px;
-}
-.img-profile {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    object-position: 0 10%;
-    border-radius: 50%;
-    margin: 0 4px;
-}
-.cstm-tbl {
-    margin: 0 10px;
-}
-a {
-    text-decoration: none;
-}
-.btn:focus,
-.btn.focus {
-    box-shadow: none;
-}
-@media (max-width: 576px) {
-    .c-header {
-        flex-wrap: inherit;
-    }
-}
 button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
@@ -165,9 +107,9 @@ h6,
 }
 
 .display-2 {
-  font-size: 2.75rem;
-  font-weight: 600;
-  line-height: 1.5;
+  font-size: 2.75rem !important;
+  font-weight: 600 !important;
+  line-height: 1.5 !important;
 }
 
 hr {
@@ -1903,4 +1845,21 @@ select:focus, select:focus-visible {
     font-size: 16px;
     color: white;
     border-radius: 50%;
+}
+
+.cstm-tbl {
+  white-space: pre;
+}
+@media (min-width:768px){
+  .table-responsive {
+      display: table !important;
+  }
+}
+
+.profile-image {
+  max-width: 300px;
+  display: block;
+  margin-bottom: 20px;
+  object-fit: cover;
+  border: 1px solid #e1e4e8;
 }
