--- a/src/app/modules/blogs/edit-blog/edit-blog.component.html
+++ b/src/app/modules/blogs/edit-blog/edit-blog.component.html
@@ -8,7 +8,7 @@
     <div class="container-fluid d-flex align-items-center">
       <div class="row">
         <div class="col-lg-12 col-md-12">
-          <h1 class="display-2 text-white">Create Book</h1>
+          <h1 class="display-2 text-white">Create Blog</h1>
         </div>
       </div>
     </div>
@@ -20,56 +20,49 @@
           <div class="card-header bg-white border-0">
             <div class="row align-items-center">
               <div class="col-8">
-                <h3 class="mb-0">Book</h3>
+                <h3 class="mb-0">Blog</h3>
            </div>
               <div class="col-4 text-right">
               </div>
             </div>
           </div>
           <div class="card-body">
-            <form [formGroup]="edit_book_form" (ngSubmit)="submitForm()">                
-              <!-- <h6 class="heading-small text-muted mb-4">book information</h6> -->
+            <form [formGroup]="edit_blog_form" (ngSubmit)="updateForm()">                
               <div class="pl-lg-4">
                 <div class="row">
                
                 <div class="col-lg-12">
                   <div class="form-group focused">
                     <label class="form-control-label" for="input-username">Title</label>
-                    <input type="text" id="input-username" formControlName="title" class="form-control form-control-alternative" value="{{book?.title}}"/>
+                    <input type="text" id="input-username" formControlName="title" class="form-control form-control-alternative" value="{{blog?.title}}"/>
                   </div>
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group focused">
-                    <label class="form-control-label" for="input-username">Book Description</label>
+                    <label class="form-control-label" for="input-username">Blog Description</label>
                    
                   <kendo-editor
                   style="height: 400px;"
                   formControlName="description"
                   [ngClass]="{ 'is-invalid': f.description.errors }"
-                  value="{{book?.description}}"
+                  value="{{blog?.description}}"
               ></kendo-editor>
             </div>
                 </div>
-                <div class="col-lg-12">
-                  <div class="form-group focused">
-                    <label class="form-control-label" for="input-username">Author</label>
-                    <input type="text" id="input-username" formControlName="author" class="form-control form-control-alternative" value="{{book?.author}}"/>
-                  </div>
-                </div>
                 <div class="col-md-12">
                   <div class="form-group focused">
-                    <label class="form-control-label" for="input-username">Upload Book Image</label>
-                    <img src="{{ImgUrl}}{{book?.image}}" *ngIf="!imageSrc" class="profile-image" alt="">
-                    <img [src]="imageSrc" *ngIf="imageSrc" class="profile-image" alt=""> <!-- <img src="http://112.196.64.119:8000/users/tyler-franta-iusJ25iYu1c-unsplash.jpg" class="profile-image" alt=""> -->
+                    <label class="form-control-label" for="input-username">Upload Blog Image</label>
+                    <img [src]="imageSrc" *ngIf="imageSrc" class="profile-image" alt="">
+                    <img src="{{ImgUrl}}{{blog?.image}}" *ngIf="!imageSrc" class="profile-image" alt="">
                     <input type="file" id="input-username" (change)="uploadFile($event)" [ngClass]="{ 'is-invalid': f.image.errors }" class="form-control form-control-alternative">
                   </div>
                 </div>
               </div>
               <div class="col-md-12">
                
-                <button class="btn btn-default">Update book</button>
+                <button class="btn btn-default">Update Blog</button>
                 <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
-                  Book udpated Successfully.
+                  Blog udpated Successfully.
                 </div>
               </div>
               </div> 
