--- a/src/app/modules/blogs/blogs.component.html
+++ b/src/app/modules/blogs/blogs.component.html
@@ -1,6 +1,12 @@
-<a routerLink="/dashboard/blog/create" class="btn btn-info create_book"><i class="fa fa-plus"></i> New blog</a>
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left"></div>       
+  <div class="col-md-6 text-right">
+    <a routerLink="/dashboard/blog/create" class="btn btn-info mybtn create_book"><i class="fa fa-plus"></i> New blog</a>
+
+  </div>
+</div>
 <div class="cstm-tbl" style="margin:0 10px">
-  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-bordered table-responsive">
+  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-responsive">
     <thead> 
       <tr>
         <th scope="col">#</th>
@@ -17,8 +23,8 @@
         <td>{{blog.title | titlecase }}</td>
         <td [innerHTML]="blog.description"></td>
        
-        <td><button class="btn btn-danger" (click)= "deleteBook(blog._id)"><i class="fa fa-fw fa-trash"></i></button>
-        <a [routerLink]="[ '/dashboard/blog/edit',blog._id]" class="btn btn-info ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
+        <td><button class="btn btn-danger btn-sm" (click)= "deleteBook(blog._id)"><i class="fa fa-fw fa-trash"></i></button>
+        <a [routerLink]="[ '/dashboard/blog/edit',blog._id]" class="btn-sm btn btn-info  mybtn ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
       </tr>
     
     </tbody>
