--- a/src/app/modules/blogs/create-blog/create-blog.component.html
+++ b/src/app/modules/blogs/create-blog/create-blog.component.html
@@ -1,3 +1,8 @@
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left">
+    <a routerLink="/dashboard/blogs" class="btn btn-info mybtn create_book">Back</a>
+  </div>
+</div>
 <div class="main-content">
   <!-- Top navbar -->
   <!-- Header -->
@@ -20,7 +25,6 @@
           <div class="card-header bg-white border-0">
             <div class="row align-items-center">
               <div class="col-8">
-                <h3 class="mb-0">Blog</h3>
            </div>
               <div class="col-4 text-right">
               </div>
@@ -60,7 +64,7 @@
               </div>
               <div class="col-md-12">
                
-                <button class="btn btn-default">Create Blog</button>
+                <button class="btn btn-default mybtn">Create Blog</button>
                 <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
                   Blog created Successfully.
                 </div>
