--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -12,7 +12,7 @@
     </button>
 
     <div class="c-header-brand">
-      <strong>Journal list</strong>
+      <strong>{{pagetitle}}</strong>
     </div>
     <!-- <a routerLink="/dashboard/admin/edit-profile" class="editprofile ml-auto mr-2"><i class="fa fa-edit mr-1"></i> <strong>Edit Profile</strong></a> -->
     <div class="dropdown mr-md-3">
@@ -25,11 +25,11 @@
   </header>
 
   <div class="c-body">  
-    <div class="row back-btn mx-2" *ngIf="this.router.url !=='/dashboard'">
+    <!-- <div class="row back-btn mx-2" *ngIf="this.router.url !=='/dashboard'">
       <div class="col-md-12 text-left">
-        <button (click)="backClicked()" class="btn btn-info"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</button>
+        <button (click)="backClicked()" class="btn btn-dark"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</button>
       </div>       
-    </div>        
+    </div>         -->
     <router-outlet></router-outlet>    
   </div>
 </div>
