--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <ul class="c-sidebar-nav">
-    <li class="c-sidebar-nav-title">Admin-Dashboard</li>
+    <li class="c-sidebar-nav-title"><img src="./../../../assets/images/islam.png" alt="Logo" width="120px" srcset=""></li>
     <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLink="" routerLinkActive="c-active">
             <!-- core ui icon -->
