--- a/src/app/modules/book-list/edit-book/edit-book.component.html
+++ b/src/app/modules/book-list/edit-book/edit-book.component.html
@@ -1,10 +1,10 @@
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left">
+    <a routerLink="/dashboard/books" class="btn btn-info mybtn create_book"><i class="fa fa-chevron-left"></i>Back</a>
+  </div>       
+</div>
 <div class="main-content">
-  <!-- Top navbar -->
-  <!-- Header -->
   <div class="header pt-5 d-flex align-items-center">
-    <!-- Mask -->
-
-    <!-- Header container -->
     <div class="container-fluid d-flex align-items-center">
       <div class="row">
         <div class="col-lg-12 col-md-12">
@@ -67,7 +67,7 @@
               </div>
               <div class="col-md-12">
                
-                <button class="btn btn-default">Update book</button>
+                <button class="btn btn-default mybtn">Update book</button>
                 <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
                   Book udpated Successfully.
                 </div>
