--- a/src/app/modules/edit-user/edit-user.component.html
+++ b/src/app/modules/edit-user/edit-user.component.html
@@ -1,14 +1,13 @@
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left">
+    <a routerLink="/dashboard/users" class="btn btn-info mybtn create_book"><i class="fa fa-chevron-left"></i>Back</a>
+  </div>       
+</div>
 <div class="main-content">
-    <!-- Top navbar -->
-    <!-- Header -->
-    <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="background-image: url(https://www.saxis.dk/blog/wp-content/uploads/2020/02/pusle-1024x768.jpeg); background-size: cover; background-position: center top;">
-      <!-- Mask -->
-      <span class="mask opacity-8"></span>
-      <!-- Header container -->
+    <div class="header pb-4 pt-5 pt-lg-8 d-flex align-items-center">
       <div class="container-fluid d-flex align-items-center">
         <div class="row">
           <div class="col-lg-12 col-md-12">
-            <h1 class="display-2 text-white">Hello,{{user?.name}}</h1>
           </div>
         </div>
       </div>
@@ -20,15 +19,13 @@
             <div class="card-header bg-white border-0">
               <div class="row align-items-center">
                 <div class="col-8">
-                  <h3 class="mb-0">My account</h3>
              </div>
                 <div class="col-4 text-right">
                 </div>
               </div>
             </div>
             <div class="card-body">
-              <form [formGroup]="editUser" (ngSubmit)="updateUser()">                
-                <h6 class="heading-small text-muted mb-4">User information</h6>
+              <form [formGroup]="editUser" (ngSubmit)="updateUser()"> 
                 <div class="pl-lg-4">
                   <div class="row">
                     <div class="col-lg-6">
@@ -64,10 +61,6 @@
                     </div>
                   </div>
                 </div>
-                <hr class="my-4">
-                
-                <!-- Description -->
-                <h6 class="heading-small text-muted mb-4">User Address</h6>
                 <div class="pl-lg-4">
                   <div class="form-group focused">
                     <label>Address</label>
@@ -76,7 +69,7 @@
                 </div>
                 
                 <div class="col-md-12">
-                  <button class="btn btn-default">Update User</button>
+                  <button class="btn btn-default mybtn">Update User</button>
                   <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
                     User updated Successfully.
                   </div>
