--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,8 +1,14 @@
-<a routerLink="/dashboard/user/create" class="btn btn-info create_book"><i class="fa fa-plus"></i> New User</a>
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left"></div>       
+  <div class="col-md-6 text-right">
+    <a routerLink="/dashboard/user/create" class="btn btn-info mybtn create_book"><i class="fa fa-plus"></i> New User</a>
+
+  </div>
+</div>
 <div class="cstm-tbl" style="margin:0 10px">
 <div class="cstm-table">
   <ngx-ui-loader></ngx-ui-loader>
-  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-bordered table-responsive">
+  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-responsive">
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -33,7 +39,9 @@
       
             </section>
           </td>
-          <td><button class="btn btn-danger" (click)= "deleteUser(user._id)"><i class="fa fa-fw fa-trash"></i></button> <a [routerLink]="[ '/dashboard/userProfile',user._id]" class="btn btn-info ml-1"><i class="fa fa-eye" aria-hidden="true"></i></a><a [routerLink]="[ '/dashboard/user/edit',user?._id]" class="btn btn-info ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
+          <td><button class="btn btn-sm btn-danger" (click)= "deleteUser(user._id)"><i class="fa fa-fw fa-trash"></i></button> 
+            <!-- <a [routerLink]="[ '/dashboard/userProfile',user._id]" class="btn-sm btn btn-info ml-1"><i class="fa fa-eye" aria-hidden="true"></i></a> -->
+            <a [routerLink]="[ '/dashboard/user/edit',user?._id]" class="btn-sm btn mybtn btn-info ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
         </tr>    
       </tbody>
   </table>
