--- a/src/app/modules/news/create-news/create-news.component.html
+++ b/src/app/modules/news/create-news/create-news.component.html
@@ -1,10 +1,10 @@
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left">
+<a routerLink="/dashboard/news" class="btn btn-info mybtn create_book"><i class="fa fa-chevron-left"></i> Back</a>
+  </div> 
+</div>
 <div class="main-content">
-    <!-- Top navbar -->
-    <!-- Header -->
     <div class="header pt-5 d-flex align-items-center">
-      <!-- Mask -->
-  
-      <!-- Header container -->
       <div class="container-fluid d-flex align-items-center">
         <div class="row">
           <div class="col-lg-12 col-md-12">
@@ -20,7 +20,6 @@
             <div class="card-header bg-white border-0">
               <div class="row align-items-center">
                 <div class="col-8">
-                  <h3 class="mb-0">News</h3>
              </div>
                 <div class="col-4 text-right">
                 </div>
@@ -60,7 +59,7 @@
                 </div>
                 <div class="col-md-12">
                  
-                  <button class="btn btn-default">Create News</button>
+                  <button class="btn btn-default mybtn">Create News</button>
                   <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
                     News created Successfully.
                   </div>
