--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -1,6 +1,15 @@
-<a routerLink="/dashboard/news/create" class="btn btn-info create_book"><i class="fa fa-plus"></i> New News</a>
+<div class="row back-btn mx-2">
+  <div class="col-md-6 text-left">
+   
+  </div> 
+  <div class="col-md-6 text-right">
+<a routerLink="/dashboard/news/create" class="btn btn-info mybtn create_book"><i class="fa fa-plus"></i> New News</a>
+   
+  </div> 
+
+</div>
 <div class="cstm-tbl" style="margin:0 10px">
-  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-bordered table-responsive">
+  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-responsive">
     <thead> 
       <tr>
         <th scope="col">#</th>
@@ -17,8 +26,8 @@
         <td>{{newsitem.title | titlecase }}</td>
         <td [innerHTML]="newsitem.description"></td>
        
-        <td><button class="btn btn-danger" (click)= "deletenews(newsitem._id)"><i class="fa fa-fw fa-trash"></i></button>
-        <a [routerLink]="[ '/dashboard/news/edit',newsitem._id]" class="btn btn-info ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
+        <td><button class="btn btn-danger btn-sm" (click)= "deletenews(newsitem._id)"><i class="fa fa-fw fa-trash"></i></button>
+        <a [routerLink]="[ '/dashboard/news/edit',newsitem._id]" class="btn-sm mybtn btn btn-info ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
       </tr>
     
     </tbody>
