--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -16,7 +16,7 @@
     </div>
     <!-- <a routerLink="/dashboard/admin/edit-profile" class="editprofile ml-auto mr-2"><i class="fa fa-edit mr-1"></i> <strong>Edit Profile</strong></a> -->
     <div class="dropdown mr-md-3">
-      <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" (click) = "dropdownHandler()"><img src="{{profile_image}}/{{user?.profile_image}}" class="img-profile" alt="">{{user?.name}} <span class="caret"></span></button>
+      <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" (click) = "dropdownHandler()"><img src="{{profile_image}}/{{user?.profile_image}}" class="img-profile" alt="">{{user?.name | titlecase}} <span class="caret"></span></button>
       <ul class="dropdown-menu {{isOpen ? 'show':''}}">
         <li><a routerLink="/dashboard/admin/edit-profile">Edit Profile</a></li>
         <li><a (click)="logout()" style="cursor: pointer;">Logout</a></li>
