--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,4 +9,8 @@ $material-icons-font-path: '~material-icons/iconfont/';
 @import 'core-ui-fixes';
 @import 'material-fixes';
 
-@import 'comman'
+@import 'comman';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+*{
+    font-family: 'Montserrat', sans-serif;
+}
