--- a/src/app/modules/admin-edit-profile/admin-edit-profile.component.html
+++ b/src/app/modules/admin-edit-profile/admin-edit-profile.component.html
@@ -8,7 +8,7 @@
       <div class="container-fluid d-flex align-items-center">
         <div class="row">
           <div class="col-lg-12 col-md-12">
-            <h1 class="display-2 text-white">Hello, {{user?.name}}</h1>
+            <h1 class="display-2 text-white">Hello, {{user?.name |titlecase}}</h1>
             <!-- <a href="#!" class="btn btn-info">Edit profile</a> -->
           </div>
         </div>
@@ -63,7 +63,7 @@
                   </div>
                 </div>
               </div>
-              <div class="text-center">
+              <!-- <div class="text-center">
                 <h3>
                   {{user?.name}}<span class="font-weight-light">, 27</span>
                 </h3>
@@ -78,8 +78,8 @@
                 </div>
                 <hr class="my-4">
                 <p>Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music.</p>
-                <!-- <a href="#">Show more</a> -->
-              </div>
+        
+              </div> -->
             </div>
           </div>
         </div>
@@ -88,7 +88,7 @@
             <div class="card-header bg-white border-0">
               <div class="row align-items-center">
                 <div class="col-8">
-                  <h3 class="mb-0">My account</h3>
+                  <!-- <h3 class="mb-0">My account</h3> -->
              </div>
                 <div class="col-4 text-right">
                   <!-- <a href="#!" class="btn btn-sm btn-primary">Settings</a> --> 
@@ -97,13 +97,13 @@
             </div>
             <div class="card-body">
               <form [formGroup]="editAdmin" (ngSubmit)="updateUser()">
-                <h6 class="heading-small text-muted mb-4">User information</h6>
+                <!-- <h6 class="heading-small text-muted mb-4">User information</h6> -->
                 <div class="pl-lg-4">
                   <div class="row">
                     <div class="col-lg-6">
                       <div class="form-group focused">
                         <label class="form-control-label" for="input-username">Name</label>
-                        <input type="text" id="input-username" formControlName="name" class="form-control form-control-alternative" placeholder="Name" value="{{user?.name}}"/>
+                        <input type="text" id="input-username" formControlName="name" class="form-control form-control-alternative" placeholder="Name" value="{{user?.name | titlecase}}"/>
                       </div>
                     </div>
                     <div class="col-lg-6">
@@ -132,42 +132,6 @@
                     </div>
                   </div>
                 </div>
-                <hr class="my-4">
-                <!-- Address -->
-                <!-- <h6 class="heading-small text-muted mb-4">Contact information</h6>
-                <div class="pl-lg-4">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="form-group focused">
-                        <label class="form-control-label" for="input-address">Address</label>
-                        <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-4">
-                      <div class="form-group focused">
-                        <label class="form-control-label" for="input-city">City</label>
-                        <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
-                      </div>
-                    </div>
-                    <div class="col-lg-4">
-                      <div class="form-group focused">
-                        <label class="form-control-label" for="input-country">Country</label>
-                        <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
-                      </div>
-                    </div>
-                    <div class="col-lg-4">
-                      <div class="form-group">
-                        <label class="form-control-label" for="input-country">Postal code</label>
-                        <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
-                <hr class="my-4">
-                <!-- Description -->
-                <h6 class="heading-small text-muted mb-4">About me</h6>
                 <div class="pl-lg-4">
                   <div class="form-group focused">
                     <label>About Me</label>
@@ -176,7 +140,7 @@
                 </div>
                 
                 <div class="col-md-12">
-                  <button class="btn btn-default">Update Profile</button>
+                  <button class="btn btn-default mybtn">Update Profile</button>
                   <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
                     Profile Updated Successfully.
                   </div>
