Fixed some UI issues

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,11 +1,10 @@
 <ul class="c-sidebar-nav">
     <li class="c-sidebar-nav-title"><img src="./../../../assets/images/islam.png" alt="Logo" width="120px" srcset=""></li>
-    <li class="c-sidebar-nav-item">
+    <!-- <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLink="" routerLinkActive="c-active">
-            <!-- core ui icon -->
             <i class="c-sidebar-nav-icon cil-home"></i> Dashboard
         </a>
-    </li>
+    </li> -->
 
     <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLink="users" routerLinkActive="c-active">
