--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,10 +1,5 @@
 <div #sidebar appSidebar>
 </div>
-
-<!--
-    Main content leaving the div content class
-    https://coreui.io/docs/layout/overview/
--->
 <div class="c-wrapper">
   <header class="c-header c-header-light c-header-fixed">    
     <button matRipple class="c-header-toggler" type="button" (click)="sidebar.toggle()">
@@ -13,9 +8,7 @@
 
     <div class="c-header-brand">
       <strong>{{pagetitle}}</strong>
-    </div>
-    <!-- <a routerLink="/dashboard/admin/edit-profile" class="editprofile ml-auto mr-2"><i class="fa fa-edit mr-1"></i> <strong>Edit Profile</strong></a> -->
-    <div class="dropdown mr-md-3">
+    </div> <div class="dropdown mr-md-3">
       <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" (click) = "dropdownHandler()"><img src="{{profile_image}}/{{user?.profile_image}}" class="img-profile" alt="">{{user?.name | titlecase}} <span class="caret"></span></button>
       <ul class="dropdown-menu {{isOpen ? 'show':''}}">
         <li><a routerLink="/dashboard/admin/edit-profile">Edit Profile</a></li>
@@ -24,12 +17,7 @@
     </div>
   </header>
 
-  <div class="c-body">  
-    <!-- <div class="row back-btn mx-2" *ngIf="this.router.url !=='/dashboard'">
-      <div class="col-md-12 text-left">
-        <button (click)="backClicked()" class="btn btn-dark"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</button>
-      </div>       
-    </div>         -->
+  <div class="c-body"> 
     <router-outlet></router-outlet>    
   </div>
 </div>
