Add Informations Crud

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -49,6 +49,13 @@
         </a>
     </li>
 
+    <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="informations" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon fa fa-info-circle"></i> Informations
+        </a>
+    </li>
+
     <!-- <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLinkActive="c-active" (click)="logout()">
 
