--- a/src/app/modules/blogs/create-blog/create-blog.component.html
+++ b/src/app/modules/blogs/create-blog/create-blog.component.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group focused">
-                    <label class="form-control-label" for="input-username">News Description</label>
+                    <label class="form-control-label" for="input-username">Blog Description</label>
                    
                   <kendo-editor
                   style="height: 400px;"
